--- a/assignment1.html
+++ b/assignment1.html
@@ -13,7 +13,7 @@
 
 
     <ul>
-        <li><a href="./assignment1.html">WAP Assignment1</a></li>
+        <li><a href="">WAP Assignment1</a></li>
     </ul>
 
     <p>
