--- a/assignment1.html
+++ b/assignment1.html
@@ -14,7 +14,7 @@
 
     <ul>
         <li><a href="">WAP Assignment1</a></li>
-        <li><a href="aboutme.html">aboutme</a></li>
+        <li><a href="/Lab2/aboutme.html">aboutme</a></li>
     </ul>
 
     <p>
