--- a/Lab2/aboutme.html
+++ b/Lab2/aboutme.html
@@ -9,7 +9,7 @@
 <body>
     <header>About Bassel Ahmed</header>
     <p class="aboutmepargraph" >My name is Bassel, 
-        iam <span id="id1">EGYPTION</span> and i love to play <span id="id1">FOOTBALL</span></p>
+        iam <span class="id1">EGYPTION</span> and i love to play <span class="id1">FOOTBALL</span></p>
     <hr>
     <section class="classes">My classes this quarter</section>
     <ul class="aboutmepargraph">
