--- a/Lab2/aboutme.html
+++ b/Lab2/aboutme.html
@@ -29,7 +29,7 @@
 
     <section>My moods</section>
     <div class="aboutmepargraph">Happy mode :
-    <img src="./How to Draw Emojis_ Happy Emoji - Really Easy Drawing Tutorial.jpeg"  width="300" 
+    <img src="./happymode.jpeg"  width="300" 
     height="300"
     alt="Happy Mode">
     Sad mode :
