--- a/Lab2/aboutme.html
+++ b/Lab2/aboutme.html
@@ -11,14 +11,14 @@
     <p class="aboutmepargraph" >My name is Bassel, 
         iam <span class="id1">EGYPTION</span> and i love to play <span class="id1">FOOTBALL</span></p>
     <hr>
-    <section class="classes">My classes this quarter</section>
+    <div class="classes">My classes this quarter</div>
     <ul class="aboutmepargraph">
         <li >402 Modern Programming Language</li>
         <li >472 Web Application Programming</li>
         <li >400 DBMS</li>
     </ul>
 
-    <section class="classes">My Faviorate movies</section>
+    <div class="classes">My Faviorate movies</div>
     <ul class="aboutmepargraph">
         <li ><a href="https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D9%81%D9%8A%D9%84_%D8%A7%D9%84%D8%A3%D8%B2%D8%B1%D9%82_(%D9%81%D9%8A%D9%84%D9%85)">الفيل الازرق</a></li>
         <li ><a href="https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D9%83%D8%A8%D9%8A%D8%B1_%D8%A3%D9%88%D9%8A_(%D9%85%D8%B3%D9%84%D8%B3%D9%84)">مسلسل الكبير</a></li>    
@@ -27,7 +27,7 @@
 
 
 
-    <section>My moods</section>
+    <div>My moods</div>
     <div class="aboutmepargraph">Happy mode :
     <img src="./happymode.jpeg"  width="300" 
     height="300"
@@ -39,7 +39,7 @@
     </div>
 
     <div>
-        <section class="classes">Fun Facts about my nighbors</section>
+        <div class="classes">Fun Facts about my nighbors</div>
         <ul class="aboutmepargraph">
             <li>mohamed loves to play leage of legands</li>
         </ul>
