--- a/Lab2/aboutme.html
+++ b/Lab2/aboutme.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>About Bassel Ahmed</header>
-    <p class="aboutmepargraph" >My name is Bassel, 
+    <p class="drop-cap" >My name is Bassel, 
         iam <span class="id1">EGYPTION</span> and i love to play <span class="id1">FOOTBALL</span></p>
     <hr>
     <div class="classes">My classes this quarter</div>
@@ -20,8 +20,8 @@
 
     <div class="classes">My Faviorate movies</div>
     <ul class="aboutmepargraph">
-        <li ><a href="https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D9%81%D9%8A%D9%84_%D8%A7%D9%84%D8%A3%D8%B2%D8%B1%D9%82_(%D9%81%D9%8A%D9%84%D9%85)">الفيل الازرق</a></li>
-        <li ><a href="https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D9%83%D8%A8%D9%8A%D8%B1_%D8%A3%D9%88%D9%8A_(%D9%85%D8%B3%D9%84%D8%B3%D9%84)">مسلسل الكبير</a></li>    
+        <li ><a class="no-underline" href="https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D9%81%D9%8A%D9%84_%D8%A7%D9%84%D8%A3%D8%B2%D8%B1%D9%82_(%D9%81%D9%8A%D9%84%D9%85)">الفيل الازرق</a></li>
+        <li ><a class="no-underline" href="https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D9%83%D8%A8%D9%8A%D8%B1_%D8%A3%D9%88%D9%8A_(%D9%85%D8%B3%D9%84%D8%B3%D9%84)">مسلسل الكبير</a></li>    
     </ul>
 
 
