--- a/assignment1.html
+++ b/assignment1.html
@@ -15,7 +15,7 @@
     <ul>
         <li><a href="">WAP Assignment1</a></li>
         <li><a href="./Lab2/aboutme.html">aboutme</a></li>
-        <li><a href="./Lab3/index.html">aboutme</a></li>
+        <li><a href="./Lab3/index.html">assignment 3</a></li>
     </ul>
 
     <p>
