--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -33,7 +33,7 @@
             <p class="boldd">Login</p>
             <p class="logintext">Login to know the status of the Ticket</p>
             <button class="button-azora">
-                <img src="./azure ad.png" alt="azora" width="50" height="25">
+                <img src="./azuread.png" alt="azora" width="50" height="25">
             </button>
             <br>
             <div class="line-container">
@@ -45,13 +45,13 @@
             <label for="Username or Email">Username or Email</label>
             <br>
             <div>
-                <input class="button-azora" type="text" placeholder="Enter email">
+                <input class="button-azora" type="text" id="username_email" placeholder="Enter email">
             </div>
             <br>
             <label for="Password">Password</label>
             <br>
             <div>
-                <input class="button-azora" type="text" placeholder="Enter Password">
+                <input class="button-azora" type="text" id="password" placeholder="Enter Password">
             </div>
             <br>
             <div>   
