--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -42,16 +42,16 @@
                 <span class="line"></span>
             </div>
             <br>
-            <label for="Username or Email">Username or Email</label>
+            <label for="UsernameorEmail">Username or Email</label>
             <br>
             <div>
-                <input class="button-azora" type="text" id="username_email" placeholder="Enter email">
+                <input class="button-azora" type="text" name="UsernameorEmail" id="username_email" placeholder="Enter email">
             </div>
             <br>
             <label for="Password">Password</label>
             <br>
             <div>
-                <input class="button-azora" type="text" id="password" placeholder="Enter Password">
+                <input class="button-azora" type="text" name="Password" id="password" placeholder="Enter Password">
             </div>
             <br>
             <div>   
