--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -45,13 +45,13 @@
             <label for="UsernameorEmail">Username or Email</label>
             <br>
             <div>
-                <input class="button-azora" type="text" name="UsernameorEmail" id="username_email" placeholder="Enter email">
+                <input class="button-azora" type="text" name="UsernameorEmail" id="UsernameorEmail" placeholder="Enter email">
             </div>
             <br>
             <label for="Password">Password</label>
             <br>
             <div>
-                <input class="button-azora" type="text" name="Password" id="password" placeholder="Enter Password">
+                <input class="button-azora" type="text" name="Password" id="Password" placeholder="Enter Password">
             </div>
             <br>
             <div>   
