--- a/Lab4/index1.html
+++ b/Lab4/index1.html
@@ -48,13 +48,13 @@
     
     <div>
         <p class="image-container">
-            <a href="https://validator.w3.org/check?url=https://basselelkady.github.io/WAP/Lab3/index.html">
+            <a href="https://validator.w3.org/check?url=https://basselelkady.github.io/WAP/Lab4/index1.html">
             <img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="Validate" />
             </a>
         </p>
     
         <p class="image-container">
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://basselelkady.github.io/WAP/Lab3/lab3css.css">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://basselelkady.github.io/WAP/Lab4/index1css.css">
             <img src="http://jigsaw.w3.org/css-validator/images/vcss"  alt="Valid CSS!">
             </a>
             </p>
