--- a/Lab4/index1.html
+++ b/Lab4/index1.html
@@ -38,7 +38,7 @@
             </div>
             <br>
             <div>
-                <input type="text" name="Password" id="Password" size="45" placeholder="Enter your Password" pattern=".{10,}">
+                <input type="password" name="Password" id="Password" size="45" placeholder="Enter your Password" pattern=".{10,}">
             </div>
             <br>
             <button>
