--- a/assignment1.html
+++ b/assignment1.html
@@ -17,6 +17,8 @@
         <li><a href="./Lab2/aboutme.html">aboutme</a></li>
         <li><a href="./Lab3/index.html">assignment 3</a></li>
         <li><a href="./Lab4/index1.html">assignment 4_part1</a></li>
+        <li><a href="./Lab4/index2.html">assignment 4_part2</a></li>
+
     </ul>
 
     <p>
