--- a/Lab4/index1.html
+++ b/Lab4/index1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index1css.css">
 </head>
 <body>
-    <form action=" ">
+    <form>
             
             <div>
                 <label for="WebsiteURL">Website URL</label>
