--- a/Lab4/index2.html
+++ b/Lab4/index2.html
@@ -39,7 +39,7 @@
                 New Product Form
             </div>
             <br>
-            <form action="">
+            <form>
                 <div class="divflex">
                     <div>
                         <div>
@@ -88,8 +88,8 @@
                             <label for="Suppliers">Suppliers :</label>
                         </div>
                         <div>
-                            <select name="Suppliers">
-                                <optgroup label="Suppliers">
+                            <select name="Suppliers" id="Suppliers">
+                                <optgroup label="Suppliers" id="Suppliers">
                                 <option>Jerry</option>
                                 <option>George</option>
                                 <option>Kramer</option>
