--- a/Lab4/index2.html
+++ b/Lab4/index2.html
@@ -89,7 +89,7 @@
                         </div>
                         <div>
                             <select name="Suppliers" id="Suppliers">
-                                <optgroup label="Suppliers" id="Suppliers">
+                                <optgroup label="Suppliers">
                                 <option>Jerry</option>
                                 <option>George</option>
                                 <option>Kramer</option>
