--- a/Lab4/index2.html
+++ b/Lab4/index2.html
@@ -90,7 +90,7 @@
                         <div>
                             <select name="Suppliers" id="Suppliers">
                                 <optgroup label="Suppliers">
-                                <option>Jerry</option>
+                                <option>Bassel</option>
                                 <option>George</option>
                                 <option>Kramer</option>
                                 <option>Elaine</option>
