--- a/Lab4/index1.html
+++ b/Lab4/index1.html
@@ -14,7 +14,8 @@
             </div>
             <br>
             <div>
-                <input type="text" name="WebsiteURL" id="WebsiteURL"  size="45" placeholder="Website URL" pattern="^(http://|https://).*">
+                <input type="text" name="WebsiteURL" id="WebsiteURL"  size="45" placeholder="Website URL"
+                 pattern="^(http://|https://).*" required>
             </div>
             <br>
             <div>
@@ -22,7 +23,7 @@
             </div>
             <br>
             <div>
-                <input type="text" name="FirstName" id="FirstName" size="45" placeholder="First NAme" pattern="[A-Z].{2,}">
+                <input type="text" name="FirstName" id="FirstName" size="45" placeholder="First NAme" pattern="[A-Z].{2,}" required>
             </div>
             <br> 
             <div>
@@ -30,7 +31,7 @@
             </div>
             <br>
             <div>
-                <input type="text" name="Email" id="Email" size="45" placeholder="Enter your Email">
+                <input type="text" name="Email" id="Email" size="45" placeholder="Enter your Email" required>
             </div>
             <br>
             <div>
@@ -38,7 +39,7 @@
             </div>
             <br>
             <div>
-                <input type="password" name="Password" id="Password" size="45" placeholder="Enter your Password" pattern=".{10,}">
+                <input type="password" name="Password" id="Password" size="45" placeholder="Enter your Password" pattern=".{10,}" required>
             </div>
             <br>
             <button>
