--- a/assignment1.html
+++ b/assignment1.html
@@ -18,6 +18,8 @@
         <li><a href="./Lab3/index.html">assignment 3</a></li>
         <li><a href="./Lab4/index1.html">assignment 4_part1</a></li>
         <li><a href="./Lab4/index2.html">assignment 4_part2</a></li>
+        <li><a href="./Lab5 Part1/lab5part1.html">assignment 4_part2</a></li>
+        
 
     </ul>
 
