--- a/Lab5 Part1/lab5part1.html
+++ b/Lab5 Part1/lab5part1.html
@@ -7,6 +7,9 @@
     <script src="./part1_Lab5.js"></script>
 </head>
 <body>
+    <p>
+        please see the concole
+    </p>
     
 </body>
 </html>
